--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,38 +12,27 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-      with:
-        fetch-depth: 0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - name: Set up cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "${{ github.workspace }}/.sonar/cache"
-        key: "${{ runner.os }}-path"
-    - run: bash scripts/install.sh
-    - run: bash scripts/run_tests.sh
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@v2.1.0
-      env:
-        SONAR_TOKEN: "${{ secrets.SONAR_TOKEN }}"
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        SONARCLOUD_URL: "${{ secrets.SONAR_URL }}"
-      with:
-        args: |-
-          #WARNING: projectKey is a required field, ensure it is configured here or in your project file
-          -Dsonar.projectKey='<<INSERT KEY HERE>>'/`
-          -Dsonar.organization='jonlabelle-github'/`
-          -Dsonar.host.url='${{ secrets.SONAR_URL }}'/`
-          -Dsonar.login=${{ env.SONAR_TOKEN }}/`
-          if [ "${{ github.event.number }}" = "false" ]; then ; fi
-#     # This item has no matching transformer
-#     - email:
-#         on_success: never
-#         on_failure: always
+    - run: pip install tox coverage
+    - run: if [[ $TRAVIS_PYTHON_VERSION == '3.8' && $DJANGOVER ]]; then export TOX_ENV=py38-$DJANGOVER; fi
+    - run: if [[ $TRAVIS_PYTHON_VERSION == '3.8' && $DJANGOVER ]]; then export TOX_ENV=py38-$DJANGOVER; fi
+    - run: if [[ $TRAVIS_PYTHON_VERSION == '3.8' && $DJANGOVER ]]; then export TOX_ENV=py38-$DJANGOVER; fi
+    - run: if [[ $TRAVIS_PYTHON_VERSION == '3.8' && $DJANGOVER ]]; then export TOX_ENV=py38-$DJANGOVER; fi
+    - run: tox -r -e "$TOX_ENV"
+    - run: bash <(curl -s https://codecov.io/bash)
+      if: "${{ success() }}"
     strategy:
       matrix:
+        DJANGOVER:
+        - django21
+        - django22
+        - django30
+        - django31
         python:
-        - '3.8'
-        - '3.8'
+        - 3.8
+        - 3.8
+        - 3.8
+    env:
+      DJANGOVER: "${{ matrix.DJANGOVER }}"
