--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,31 +8,36 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - run: pip install codecov tox
-    - run: tox -e py
-    - run: codecov
-      if: "${{ success() }}"
+    - run: pip install flake8
+    - run: pip install -r requirements.txt
+    - run: python setup.py test
+    - run: flake8 --max-line-length 120 *.py
+#     # This item has no matching transformer
+#     - email: false
     strategy:
       matrix:
         python:
         - '3.8'
         - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.9'
-        - pypy
-        - pypy-3.6
+  test_2:
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install flake8
+    - run: pip install -r requirements.txt
+    - run: python setup.py test
+    - run: flake8 --max-line-length 120 *.py
+#     # This item has no matching transformer
+#     - email: false
