--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,26 +8,22 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install -r test-requirements.txt
     - run: pip install -e .
-    - run: pip install requests pytest-cov coveralls
-    - run: docker-compose -f tests/config/docker-compose.yml up -d
-    - run: sleep 120
-    - run: "./tests/config/bootstrap"
-    - run: py.test -v --cov=pygelf
-    - run: docker-compose -f tests/config/docker-compose.yml down
+    - run: nosetests -q --with-coverage --cover-package=pycron
     - run: coveralls
       if: "${{ success() }}"
     strategy:
       matrix:
         python:
-        - '3.8'
         - '3.8'
         - '3.8'
         - '3.8'
