run litex-hub/litespi/gpt-4o-1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,408 +7,23 @@ on:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
-  test:
+  Unit_tests:
     runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-    - run: ". ${{ github.workspace }}/.nvm/nvm.sh"
-    - run: nvm install 12
-    - run: nvm use 12
-    - run: npm install -g mjml-http-server@0.0.3
-    - run: npm install mjml@$MJML_VERSION
-    - run: node_modules/.bin/mjml --version
-    - run: pip install "Django$DJANGO_VERSION"
-    - run: pip install "requests>=2.20.0,<=2.24.0"
-    - run: python tools.py test
-    strategy:
-      matrix:
-        python:
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        include:
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.6.3
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 3.3.8
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.3.1
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.4.0
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.5.1
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.6.3
-        exclude:
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.3"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.1"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<3.2"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.9"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.10"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.11"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<1.12"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.1"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 3.3.8
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.3.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.4.0
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.5.1
-          python: '3.8'
-        - DJANGO_VERSION: "<2.2"
-          MJML_VERSION: 4.6.3
-          python: '3.8'
-    env:
-      DJANGO_VERSION: "${{ matrix.DJANGO_VERSION }}"
-      MJML_VERSION: "${{ matrix.MJML_VERSION }}"
+        python-version: '3.8'
+    - run: sudo apt-get update
+    - run: sudo apt-get -y install verilator libevent-dev libjson-c-dev
+    - run: cd ~/
+    - run: wget https://raw.githubusercontent.com/enjoy-digital/litex/main/litex_setup.py
+    - run: python3 litex_setup.py init install
+    - run: cd ${{ github.workspace }}
+    - run: python3 setup.py install
+    - run: wget https://static.dev.sifive.com/dev-tools/riscv64-unknown-elf-gcc-20171231-x86_64-linux-centos6.tar.gz
+    - run: tar -xvf riscv64-unknown-elf-gcc-20171231-x86_64-linux-centos6.tar.gz
+    - run: export PATH=$PATH:$PWD/riscv64-unknown-elf-gcc-20171231-x86_64-linux-centos6/bin/
+    - run: cd ${{ github.workspace }}
+    - run: python setup.py test
