--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,23 +7,28 @@ on:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
-  Unit_tests:
+  test:
     runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: '3.8'
-    - run: sudo apt-get update
-    - run: sudo apt-get -y install verilator libevent-dev libjson-c-dev
-    - run: cd ~/
-    - run: wget https://raw.githubusercontent.com/enjoy-digital/litex/main/litex_setup.py
-    - run: python3 litex_setup.py init install
-    - run: cd ${{ github.workspace }}
-    - run: python3 setup.py install
-    - run: wget https://static.dev.sifive.com/dev-tools/riscv64-unknown-elf-gcc-20171231-x86_64-linux-centos6.tar.gz
-    - run: tar -xvf riscv64-unknown-elf-gcc-20171231-x86_64-linux-centos6.tar.gz
-    - run: export PATH=$PATH:$PWD/riscv64-unknown-elf-gcc-20171231-x86_64-linux-centos6/bin/
-    - run: cd ${{ github.workspace }}
-    - run: python setup.py test
+        python-version: "${{ matrix.python }}"
+    - run: pip install bandit flake8 python-coveralls coverage liccheck
+    - run: pip install -r requirements.txt
+    - run: python setup.py bdist_wheel
+    - run: pip install dist/feedgen*
+    - run: make test
+    - run: liccheck -s .licenses.ini
+    - run: python -m feedgen
+    - run: python -m feedgen atom
+    - run: python -m feedgen rss
+    - run: coveralls
+      if: "${{ success() }}"
+    strategy:
+      matrix:
+        python:
+        - 3.8
+        - 3.8
+        - 3.8
