--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,105 +12,15 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install -v .
-    - run: python -m pip install $PRE --upgrade pytest pytest-cov coverage
-    - run: coverage run run_tests.py
-    - run: coverage report -m
-    - run: bash <(curl -s https://codecov.io/bash)
-      if: "${{ success() }}"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: "${{ matrix.python }}"
+    - run: pip install flask && pip install nose
+    - run: python setup.py test
     strategy:
-      matrix: {}
-#       # 'allow_failures' transformations are currently unsupported.
-  test_2:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install -v .
-    - run: python -m pip install $PRE --upgrade pytest pytest-cov coverage
-    - run: coverage run run_tests.py
-    - run: coverage report -m
-    - run: bash <(curl -s https://codecov.io/bash)
-      if: "${{ success() }}"
-  test_3:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install -v .
-    - run: python -m pip install $PRE --upgrade pytest pytest-cov coverage
-    - run: coverage run run_tests.py
-    - run: coverage report -m
-    - run: bash <(curl -s https://codecov.io/bash)
-      if: "${{ success() }}"
-  test_4:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install -v .
-    - run: python -m pip install $PRE --upgrade pytest pytest-cov coverage
-    - run: coverage run run_tests.py
-    - run: coverage report -m
-    - run: bash <(curl -s https://codecov.io/bash)
-      if: "${{ success() }}"
-  test_5:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install -v .
-    - run: python -m pip install $PRE --upgrade pytest pytest-cov coverage
-    - run: coverage run run_tests.py
-    - run: coverage report -m
-    - run: bash <(curl -s https://codecov.io/bash)
-      if: "${{ success() }}"
-  test_6:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install -v .
-    - run: python -m pip install $PRE --upgrade pytest pytest-cov coverage
-    - run: coverage run run_tests.py
-    - run: coverage report -m
-    - run: bash <(curl -s https://codecov.io/bash)
-      if: "${{ success() }}"
-  test_7:
-    runs-on: ubuntu-latest
-    env:
-      PRE: "--pre"
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install -v .
-    - run: python -m pip install $PRE --upgrade pytest pytest-cov coverage
-    - run: coverage run run_tests.py
-    - run: coverage report -m
-    - run: bash <(curl -s https://codecov.io/bash)
-      if: "${{ success() }}"
+      matrix:
+        python:
+        - 3.8
+        - 3.8
+        - 3.8
+        - 3.8
