--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,8 @@ jobs:
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install flake8
-    - run: python -m pytest -v .
-    - run: flake8
+    - run: make deps
+    - run: make test
     strategy:
       matrix:
         python:
@@ -26,7 +25,3 @@ jobs:
         - '3.8'
         - '3.8'
         - '3.8'
-        - '3.8'
-        - '3.9'
-        - pypy
-        - pypy-3.6
