--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,25 +7,36 @@ on:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
-  test:
+  MTGJSON5_Tox_Python_3.8:
     runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-    - run: pip install -r requirements.txt
-    - run: pip install -r requirements-dev.txt
-    - run: pip install -e .
-    - run: flake8
-    - run: pytest --cov
-    - run: coveralls
-      if: "${{ success() }}"
-    strategy:
-      matrix:
-        python:
-        - 3.8
-        - 3.8
-        - 3.8
-        - 3.8
+        python-version: '3.8'
+    - run: pip install -U pip setuptools wheel tox-travis
+    - run: pip install -r requirements_test.txt
+    - run: tox
+  MTGJSON5_Tox_Python_3.8:
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install -U pip setuptools wheel tox-travis
+    - run: pip install -r requirements_test.txt
+    - run: tox
+  MTGJSON5_Tox_Python_3_8:
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install -U pip setuptools wheel tox-travis
+    - run: pip install -r requirements_test.txt
+    - run: tox
