run multiformats/multicodec/gpt-4o-1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,36 +7,14 @@ on:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
-  MTGJSON5_Tox_Python_3.8:
-    runs-on: ubuntu-22.04
+  test:
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: '3.8'
-    - run: pip install -U pip setuptools wheel tox-travis
-    - run: pip install -r requirements_test.txt
-    - run: tox
-  MTGJSON5_Tox_Python_3.8:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: pip install -U pip setuptools wheel tox-travis
-    - run: pip install -r requirements_test.txt
-    - run: tox
-  MTGJSON5_Tox_Python_3_8:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: pip install -U pip setuptools wheel tox-travis
-    - run: pip install -r requirements_test.txt
-    - run: tox
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install -r requirements.txt
+    - run: python validate.py
