--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,25 +8,22 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-      with:
-        fetch-depth: false
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install tox-travis
-    - run: tox
-    - uses: rtCamp/action-slack-notify@v2.2.1
-      env:
-        SLACK_WEBHOOK: "${{ secrets.SLACK_WEBHOOK }}"
+    - run: sudo apt-get -qq update
+    - run: sudo apt-get install -y libicu-dev
+    - run: pip install -e .
+    - run: pip install pyicu coverage nose twine
+    - run: nosetests --with-coverage --cover-package=fingerprints --cover-erase
+    - run: if [[ ${{ github.ref }} = ${{ github.ref }} ]]; then python setup.py sdist bdist_wheel ; twine upload dist/* ; fi
+      if: "${{ success() }}"
     strategy:
       matrix:
         python:
         - '3.8'
         - '3.8'
-        - '3.9'
-        - '3.10'
-        - '3.11'
